attempt to fix spacing

--- a/style.css
+++ b/style.css
@@ -19,7 +19,9 @@ body {
 }
 
 .homescore {
-        width: 23%;
+  display: flex;
+  justify-content: space-around;
+  width: 23%;
         height: 30%;
         position: absolute;
         top: 80;
@@ -29,7 +31,9 @@ body {
       }
 
 .guestscore {
-        width: 23%;
+  display: flex;
+    justify-content: space-around;      
+  width: 23%;
         height: 30%;
         position: absolute;
         top: 80;
@@ -45,13 +49,17 @@ body {
       }
 
 .homescorebtn {
- position: absolute;
+  display: flex;
+  justify-content: space-around;
+  position: absolute;
   top: 180;
   left: 65;
 }
 
 .guestscorebtn {
-  position: absolute;
+    display: flex;
+    justify-content: space-around;
+    position: absolute;
   top: 180;
   left: 315;
 }
